# nvidia-code-mgmt

./: README.md  meson.build  meson_options.txt
debug_token/: main.cpp  meson.build  token_utility.hpp  update_debug_token.cpp  update_debug_token.hpp
ocp_recovery_tool/: i2c_utils.cpp  i2c_utils.hpp  meson.build  recovery_commands.cpp  recovery_commands.hpp  recoverytool_utils.cpp  recoverytool_utils.hpp
recovery_tool/common/: i2c_utils.cpp  i2c_utils.hpp
recovery_tool/glacier_recovery_tool/: glacier_recovery_commands.cpp  glacier_recovery_commands.hpp  glacier_recovery_interface.cpp  glacier_recovery_interface.hpp  glacier_recovery_utils.cpp  glacier_recovery_utils.hpp  meson.build
recovery_tool/ocp_recovery_tool/: meson.build  recovery_commands.cpp  recovery_commands.hpp  recoverytool_interface.cpp  recoverytool_interface.hpp  recoverytool_utils.cpp  recoverytool_utils.hpp
services/: com.Nvidia.CPLD.Updater.service  com.Nvidia.DebugTokenErase.Updater.service  com.Nvidia.DebugTokenInstall.Updater.service  com.Nvidia.FPGA.Updater.service  com.Nvidia.Jamplayer.service  com.Nvidia.MTD.Updater.bmc.service  com.Nvidia.MTD.Updater.fpga1.service  com.Nvidia.MTD.Updater.pciechip.service  com.Nvidia.ORIN.Updater.service  com.Nvidia.PEX.Updater.service  com.Nvidia.PSU.Updater.service  com.Nvidia.RT.Updater.service  com.Nvidia.SMCU.Updater.service  com.Nvidia.Switchtec.Fuse.service  cpld-update@.service  debug-token-update@.service  fpga-update@.service  jamplayer-flash@.service  meson.build  mtd-update@.service  orin-update@.service  pex-update@.service  psu-update@.service  rt-update-direct@.service  rt-update@.service  smcu-update@.service  switchtec-fuser@.service
src/: activation_listener.hpp  association_interface.hpp  base_controller.cpp  base_controller.hpp  base_item_updater.cpp  base_item_updater.hpp  cpld_updater.cpp  cpld_updater.hpp  cpld_util.hpp  dbusutils.cpp  dbusutils.hpp  debug_token_erase.cpp  debug_token_erase.hpp  debug_token_install.cpp  debug_token_install.hpp  fpga_updater.cpp  fpga_updater.hpp  jamplayer.cpp  jamplayer.hpp  main.cpp  meson.build  mock_util.hpp  mtd_updater.cpp  mtd_updater.hpp  orin_updater.cpp  orin_updater.hpp  pex_updater.cpp  pex_updater.hpp  psu_updater.cpp  psu_updater.hpp  psu_util.hpp  retimer_updater.cpp  retimer_updater.hpp  smcu_updater.cpp  smcu_updater.hpp  switchtec_fuse.cpp  switchtec_fuse.hpp  types.hpp  version.cpp  version.hpp  (+2 more)
test/: meson.build  test_debug_token_utility.cpp  test_update_debug_token.cpp
