
option('PSU_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables PSU support')

option('PSU_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'PSU supported models')

option('FPGA_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables FPGA support')

option('FPGA_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'FPGA supported models')

option('CPLD_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables CPLD support')

option('CPLD_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'CPLD supported models')

option('RT_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables retimer support')

option('RT_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'RT supported models')

option('PEX_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables PEX SW support')

option('PEX_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'PEX supported models')

option('INVENTORY_PATH_BASE',
       type: 'string',
       value: '/xyz/openbmc_project/inventory/system',
       description: 'The base path for inventory')

option('IMG_DIR',
       type: 'string',
       value: '/tmp/images',
       description: 'The directory where downloaded or uploaded images are placed and extracted')


option('IMG_DIR_PERSIST',
       type: 'string',
       value: '/var/lib/obmc/fwimgs',
       description: 'The writable directory to store updated images persistently')

option('IMG_DIR_BUILTIN',
       type: 'string',
       value: '/usr/share/obmc/fwimgs',
       description: 'The read-only directory where the built-in images are stored')

option(
    'MOCK_UTILS',
    type: 'boolean',
    value: true,
    description: 'Mock underlying hardware calls'
)