
option('PSU_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables PSU support')

option('PSU_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'PSU supported models')

option('FPGA_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables FPGA support')

option('FPGA_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'FPGA supported models')

option('BMC_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'BMC supported models')

option('CPLD_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables CPLD support')

option('CPLD_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'CPLD supported models')

option('RT_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables retimer support')

option('RT_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'RT supported models')

option('PEX_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables PEX SW support')

option('PEX_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'PEX supported models')

option('DEBUG_TOKEN_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables Debug Token support')

option('DEBUG_TOKEN_INSTALL_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'Debug Token supported models for install')

option('DEBUG_TOKEN_ERASE_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'Debug Token supported models for erase')

option('MTD_UPDATER_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables MTD update support. It takes 1 min to update fpga and 4 min to update BMC.')

option('SWITCHTEC_FUSE_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables support to be able to set the fuses for switchtec device.')

option('SWITCHTEC_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'SWITCHTEC supported models')

option('JAMPLAYER_SUPPORT',
       type: 'feature',
       value: 'disabled',
       description: 'Enables support to update Altera FPGA over JTAG.')

option('JAMPLAYER_SUPPORTED_MODEL',
       type: 'string',
       value: '',
       description: 'Altera supported models')

option('INVENTORY_PATH_BASE',
       type: 'string',
       value: '/xyz/openbmc_project/inventory/system',
       description: 'The base path for inventory')

option('IMG_DIR',
       type: 'string',
       value: '/tmp/images',
       description: 'The directory where downloaded or uploaded images are placed and extracted')


option('IMG_DIR_PERSIST',
       type: 'string',
       value: '/var/lib/obmc/fwimgs',
       description: 'The writable directory to store updated images persistently')

option('IMG_DIR_BUILTIN',
       type: 'string',
       value: '/usr/share/obmc/fwimgs',
       description: 'The read-only directory where the built-in images are stored')

option(
    'MOCK_UTILS',
    type: 'boolean',
    value: true,
    description: 'Mock underlying hardware calls'
)

option(
    'NON_PLDM_DEFAULT_TIMEOUT',
    type: 'integer',
    value: 1200,
    description: 'Default update timeout in seconds for non PLDM devices.'
)

option(
    'RT_UPDATE_TIMEOUT',
    type: 'integer',
    value: 180,
    description: 'Retimer update timeout in seconds.'
)

option(
    'MTD_UPDATE_TIMEOUT',
    type: 'integer',
    value: 720,
    description: 'MTD update timeout in seconds.'
)

option(
    'SWITCHTEC_FUSE_TIMEOUT',
    type: 'integer',
    value: 60,
    description: 'Fusing timeout in seconds.'
)

option(
    'JAMPLAYER_TIMEOUT',
    type: 'integer',
    value: 360,
    description: 'jamplayer update timeout in seconds.'
)


option(
       'tests',
       type: 'feature',
       value: 'enabled',
       description: 'Build tests.'
)
